err.log
In file included from ./src/socket.c:1:0:
./include/base.h:138:0: warning: "max" redefined
 #define max(a,b)    (((a) > (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:16,
                 from ./src/socket.c:1:
c:\program files\git\mingw32\include\windef.h:162:0: note: this is the location of the previous definition
 #define max(a,b) ((a)>(b)?(a):(b))
 
In file included from ./src/socket.c:1:0:
./include/base.h:139:0: warning: "min" redefined
 #define min(a,b)    (((a) < (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:16,
                 from ./src/socket.c:1:
c:\program files\git\mingw32\include\windef.h:165:0: note: this is the location of the previous definition
 #define min(a,b) ((a)<(b)?(a):(b))
 
./src/socket.c: In function 'create_tcp':
./src/socket.c:186:41: error: 'opt' undeclared (first use in this function)
  if (ioctlsocket(fd, FIONBIO,(u_long *)&opt) == SOCKET_ERROR)
                                         ^~~
./src/socket.c:186:41: note: each undeclared identifier is reported only once for each function it appears in
./src/socket.c:209:50: warning: passing argument 4 of 'setsockopt' from incompatible pointer type [-Wincompatible-pointer-types]
     if( setsockopt(fd, SOL_SOCKET, SO_REUSEADDR, &sock_opt, sizeof(sock_opt)) !=0) goto end_out;
                                                  ^
In file included from c:\program files\git\mingw32\include\winsock2.h:62:0,
                 from c:\program files\git\mingw32\include\_winsock.h:50,
                 from c:\program files\git\mingw32\include\windows.h:85,
                 from ./include/base.h:16,
                 from ./src/socket.c:1:
c:\program files\git\mingw32\include\winsock.h:599:32: note: expected 'const char *' but argument is of type 'int *'
 WINSOCK_API_LINKAGE int PASCAL setsockopt (SOCKET, int, int, const char *, int);
                                ^~~~~~~~~~
./src/socket.c:174:9: warning: unused variable 'keepCount' [-Wunused-variable]
     int keepCount = 5;      //retry count
         ^~~~~~~~~
./src/socket.c:173:9: warning: unused variable 'keepInterval' [-Wunused-variable]
     int keepInterval = 3;   //3seconds inteval
         ^~~~~~~~~~~~
./src/socket.c:172:9: warning: unused variable 'keepIdle' [-Wunused-variable]
     int keepIdle = 15;      //if no data come in or out in 15 seconds,send tcp probe, not send ping
         ^~~~~~~~
./src/socket.c:171:9: warning: unused variable 'keepAlive' [-Wunused-variable]
     int keepAlive = 1;      //heart echo open
         ^~~~~~~~~
./src/socket.c: In function 'client_tcp_loop':
./src/socket.c:418:45: warning: pointer targets in passing argument 2 of 'recv' differ in signedness [-Wpointer-sign]
                 if((ret = recv(current->fd, current->head_buf+current->data_pos,HEAD_LEN - current ->data_pos, 0)) <= 0)
                                             ^~~~~~~
In file included from c:\program files\git\mingw32\include\winsock2.h:62:0,
                 from c:\program files\git\mingw32\include\_winsock.h:50,
                 from c:\program files\git\mingw32\include\windows.h:85,
                 from ./include/base.h:16,
                 from ./src/socket.c:1:
c:\program files\git\mingw32\include\winsock.h:595:32: note: expected 'char *' but argument is of type 'unsigned char *'
 WINSOCK_API_LINKAGE int PASCAL recv (SOCKET, char *, int, int);
                                ^~~~
./src/socket.c:460:45: warning: pointer targets in passing argument 2 of 'recv' differ in signedness [-Wpointer-sign]
                 if((ret = recv(current->fd, current->data_buf + current->data_pos, current->data_size - current ->data_pos,0)) <= 0)
                                             ^~~~~~~
In file included from c:\program files\git\mingw32\include\winsock2.h:62:0,
                 from c:\program files\git\mingw32\include\_winsock.h:50,
                 from c:\program files\git\mingw32\include\windows.h:85,
                 from ./include/base.h:16,
                 from ./src/socket.c:1:
c:\program files\git\mingw32\include\winsock.h:595:32: note: expected 'char *' but argument is of type 'unsigned char *'
 WINSOCK_API_LINKAGE int PASCAL recv (SOCKET, char *, int, int);
                                ^~~~
./src/socket.c:473:21: warning: implicit declaration of function 'process_client_msg' [-Wimplicit-function-declaration]
                     process_client_msg(current);
                     ^~~~~~~~~~~~~~~~~~
./src/socket.c: In function 'client_udp_loop':
./src/socket.c:550:3: warning: 'usleep' is deprecated [-Wdeprecated-declarations]
   usleep(20000);
   ^~~~~~
In file included from ./include/base.h:7:0,
                 from ./src/socket.c:1:
c:\program files\git\mingw32\include\unistd.h:100:29: note: declared here
 int __cdecl __MINGW_NOTHROW usleep( useconds_t )__MINGW_ATTRIB_DEPRECATED;
                             ^~~~~~
./src/socket.c:532:15: warning: unused variable 'socklen' [-Wunused-variable]
     socklen_t socklen = sizeof (struct sockaddr_in);
               ^~~~~~~
./src/socket.c:531:12: warning: unused variable 'fds' [-Wunused-variable]
     fd_set fds;
            ^~~
./src/socket.c:530:9: warning: unused variable 'ret' [-Wunused-variable]
     int ret;
         ^~~
./src/socket.c: In function 'server_udp_loop':
./src/socket.c:607:6: warning: unused variable 'test' [-Wunused-variable]
  int test = 0;
      ^~~~
./src/socket.c:605:20: warning: unused variable 'count' [-Wunused-variable]
     unsigned short count = 0;
                    ^~~~~
./src/socket.c:603:18: warning: unused variable 'offset' [-Wunused-variable]
     unsigned int offset = 0;
                  ^~~~~~
./src/socket.c:602:18: warning: unused variable 'total_size' [-Wunused-variable]
     unsigned int total_size = 0;
                  ^~~~~~~~~~
./src/socket.c: In function 'create_h264_socket':
./src/socket.c:680:3: warning: 'usleep' is deprecated [-Wdeprecated-declarations]
   usleep(10000);
   ^~~~~~
In file included from ./include/base.h:7:0,
                 from ./src/socket.c:1:
c:\program files\git\mingw32\include\unistd.h:100:29: note: declared here
 int __cdecl __MINGW_NOTHROW usleep( useconds_t )__MINGW_ATTRIB_DEPRECATED;
                             ^~~~~~
./src/socket.c: In function 'server_tcp_loop':
./src/socket.c:792:53: warning: pointer targets in passing argument 2 of 'recv' differ in signedness [-Wpointer-sign]
                         if((ret = recv(current->fd, current->head_buf+current->data_pos,HEAD_LEN - current ->data_pos, 0)) <= 0)
                                                     ^~~~~~~
In file included from c:\program files\git\mingw32\include\winsock2.h:62:0,
                 from c:\program files\git\mingw32\include\_winsock.h:50,
                 from c:\program files\git\mingw32\include\windows.h:85,
                 from ./include/base.h:16,
                 from ./src/socket.c:1:
c:\program files\git\mingw32\include\winsock.h:595:32: note: expected 'char *' but argument is of type 'unsigned char *'
 WINSOCK_API_LINKAGE int PASCAL recv (SOCKET, char *, int, int);
                                ^~~~
./src/socket.c:847:53: warning: pointer targets in passing argument 2 of 'recv' differ in signedness [-Wpointer-sign]
                         if((ret = recv(current->fd, current->data_buf + current->data_pos, current->data_size - current ->data_pos,0)) <= 0)
                                                     ^~~~~~~
In file included from c:\program files\git\mingw32\include\winsock2.h:62:0,
                 from c:\program files\git\mingw32\include\_winsock.h:50,
                 from c:\program files\git\mingw32\include\windows.h:85,
                 from ./include/base.h:16,
                 from ./src/socket.c:1:
c:\program files\git\mingw32\include\winsock.h:595:32: note: expected 'char *' but argument is of type 'unsigned char *'
 WINSOCK_API_LINKAGE int PASCAL recv (SOCKET, char *, int, int);
                                ^~~~
./src/socket.c:863:32: warning: implicit declaration of function 'process_server_msg' [-Wimplicit-function-declaration]
                             if(process_server_msg(current))
                                ^~~~~~~~~~~~~~~~~~
./src/socket.c:906:1: warning: label 'run_end' defined but not used [-Wunused-label]
 run_end:
 ^~~~~~~
./src/socket.c: In function 'load_wsa':
./src/socket.c:936:16: warning: 'return' with a value, in function returning void
         return -1;
                ^
./src/socket.c:928:6: note: declared here
 void load_wsa()
      ^~~~~~~~
./src/socket.c: In function 'destroy_socket':
./src/socket.c:948:5: warning: this 'if' clause does not guard... [-Wmisleading-indentation]
     if(vids_queue)
     ^~
./src/socket.c:950:2: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
  vids_buf = NULL;
  ^~~~~~~~
make: *** [socket.o] Error 1
